...
                                }).accessibilityIdentifier("navLink")
                        }
                    }
                    .frame(maxWidth: .infinity, maxHeight: .infinity, alignment: .center)
                    Spacer()
                }
                .navigationTitle("Movies").accessibilityIdentifier("navTitle")
                .toolbar {
                    Button {
                        data.showFilters = true
                    } label: {
                        Image(systemName: "doc.text.magnifyingglass")
                    }
...
